# RapidLogs

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.code_quality/: ruff.toml
src/application/: api.py
src/model/: log_entry.py  log_list.py
src/services/: log_pruner.py  sqlite_conn.py  temporal_cache.py
tests/unit/application/: test_api.py
tests/unit/model/: test_log_entry.py
tests/unit/services/: test_log_pruner.py  test_temporal_cache.py
